# dea-spark-week-ca

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  day1_spark_tasks.py  pyproject.toml
output/covid_gdp_analysis.parquet/: .part-00000-e134ffb0-7a88-494a-bff4-8d2171d8e5ad-c000.snappy.parquet.crc  .part-00001-e134ffb0-7a88-494a-bff4-8d2171d8e5ad-c000.snappy.parquet.crc  .part-00002-e134ffb0-7a88-494a-bff4-8d2171d8e5ad-c000.snappy.parquet.crc  .part-00003-e134ffb0-7a88-494a-bff4-8d2171d8e5ad-c000.snappy.parquet.crc  .part-00004-e134ffb0-7a88-494a-bff4-8d2171d8e5ad-c000.snappy.parquet.crc  .part-00005-e134ffb0-7a88-494a-bff4-8d2171d8e5ad-c000.snappy.parquet.crc  .part-00006-e134ffb0-7a88-494a-bff4-8d2171d8e5ad-c000.snappy.parquet.crc  .part-00007-e134ffb0-7a88-494a-bff4-8d2171d8e5ad-c000.snappy.parquet.crc
spark_practices/: day1_spark_tasks.py  day2_covid_spark_tasks.py  day3_covid_advanced_spark_tasks.py
tests/: conftest.py  test_day1.py  test_day2.py
